--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bd76b7">  <td>19/10/01 00:54:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TesterLogin.intialize()[pri:0, instance:Hybrid.TesterLogin@385e9564]">&gt;&gt;intialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="bd76b7">  <td>19/10/01 00:54:44</td>   <td>4244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesterLogin.OpenUrl()[pri:0, instance:Hybrid.TesterLogin@385e9564]">OpenUrl</td> 
-  <td>main@1355457888</td>   <td></td> </tr>
-<tr bgcolor="bd76b7">  <td>19/10/01 00:55:05</td>   <td>24612</td> <td>&nbsp;</td><td title="&lt;&lt;TesterLogin.closeAll()[pri:0, instance:Hybrid.TesterLogin@385e9564]">&lt;&lt;closeAll</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1355457888</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/10/01 22:41:20</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TesterLogin.intialize()[pri:0, instance:Hybrid.TesterLogin@6a4f787b]">&gt;&gt;intialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/10/01 22:41:24</td>   <td>4171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesterLogin.OpenUrl()[pri:0, instance:Hybrid.TesterLogin@6a4f787b]">OpenUrl</td> 
+  <td>main@633070006</td>   <td></td> </tr>
+<tr bgcolor="69b199">  <td>19/10/01 22:42:00</td>   <td>39865</td> <td>&nbsp;</td><td title="&lt;&lt;TesterLogin.closeAll()[pri:0, instance:Hybrid.TesterLogin@6a4f787b]">&lt;&lt;closeAll</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@633070006</td>   <td></td> </tr>
 </table>
